本机直接内存溢出π